Artist Component Added

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,11 @@ music-master/.parcel-cache/data.mdb
 music-master/.parcel-cache/data.mdb
 music-master/dist/index.975ef6c8.js
 music-master/dist/index.975ef6c8.js.map
+music-master/.parcel-cache/37515c8b5bc9bf6d.txt
+music-master/.parcel-cache/50ad7c28ac87f697
+music-master/.parcel-cache/5ce9eacc6a22bb83
+music-master/.parcel-cache/5d102dff0a3f4e7e
+music-master/.parcel-cache/b9964151050d55a0
+music-master/.parcel-cache/data.mdb
+music-master/dist/index.975ef6c8.js
+music-master/dist/index.975ef6c8.js.map
